[gd_scene load_steps=34 format=3 uid="uid://ccsn6ccthu706"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_v00s8"]
[ext_resource type="Texture2D" uid="uid://8dmebkjl1rlp" path="res://sprites/level_select.png" id="2_asan8"]
[ext_resource type="Texture2D" uid="uid://cbamm0uxs5aee" path="res://sprites/text_board.png" id="2_rcl7u"]
[ext_resource type="Script" path="res://scenes/ScrollContainer.gd" id="3_hxynu"]
[ext_resource type="Theme" uid="uid://c6wc78uj72tgu" path="res://sprites/pixelfont.tres" id="3_xob40"]
[ext_resource type="FontFile" uid="uid://dox7gol2t7u74" path="res://sprites/kongtext.ttf" id="5_dksj0"]
[ext_resource type="Texture2D" uid="uid://ct8g2l6ondn1n" path="res://sprites/soundOn.png" id="6_6xnmg"]
[ext_resource type="Texture2D" uid="uid://d1aik63g5soyp" path="res://sprites/playnip.png" id="7_5c4xj"]

[sub_resource type="Theme" id="Theme_wm75b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hni54"]

[sub_resource type="LabelSettings" id="LabelSettings_hgjs3"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4aa6b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4xno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sysi8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmx0m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtiq1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mcbh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_62jws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_whwfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8f7bm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dk1bo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wxte5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ghaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4yla3"]

[sub_resource type="LabelSettings" id="LabelSettings_k5q1p"]
font = ExtResource("5_dksj0")
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g0joi"]
font = ExtResource("5_dksj0")
font_size = 13
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xsk60"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myhdo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fn80b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6hf3r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kubmr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ab8la"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p8h3n"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_v00s8")

[node name="ColorRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_asan8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 203.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_wm75b")
theme_override_styles/panel = SubResource("StyleBoxEmpty_hni54")
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("3_hxynu")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Panel" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rcl7u")

[node name="Song1" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -45.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xob40")
text = "Song 1"
label_settings = SubResource("LabelSettings_hgjs3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Song1Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4aa6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l4xno")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sysi8")

[node name="Selector" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel"]
visible = false
layout_mode = 0
offset_right = 203.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel/Selector"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmx0m")

[node name="Panel2" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rcl7u")

[node name="Song2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -46.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xob40")
text = "Song 2"
label_settings = SubResource("LabelSettings_hgjs3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Song2Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4aa6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qtiq1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8mcbh")

[node name="Selector" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel2"]
visible = false
layout_mode = 0
offset_right = 203.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel2/Selector"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmx0m")

[node name="Panel3" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rcl7u")

[node name="Song3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -46.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xob40")
text = "Song 3"
label_settings = SubResource("LabelSettings_hgjs3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Song3Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4aa6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_62jws")
theme_override_styles/focus = SubResource("StyleBoxEmpty_whwfu")

[node name="Selector" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel3"]
visible = false
layout_mode = 0
offset_right = 203.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel3/Selector"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmx0m")

[node name="Panel4" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rcl7u")

[node name="Song4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -46.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xob40")
text = "Song 4"
label_settings = SubResource("LabelSettings_hgjs3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Song4Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4aa6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8f7bm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dk1bo")

[node name="Selector" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel4"]
visible = false
layout_mode = 0
offset_right = 203.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel4/Selector"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmx0m")

[node name="Panel5" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rcl7u")

[node name="Song5" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -46.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xob40")
text = "Song 5"
label_settings = SubResource("LabelSettings_hgjs3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Song5Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4aa6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wxte5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6ghaw")

[node name="Selector" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel5"]
visible = false
layout_mode = 0
offset_right = 203.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/Panel5/Selector"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmx0m")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -282.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4yla3")

[node name="TitleAndDifficutly" type="MarginContainer" parent="MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer2/Panel/TitleAndDifficutly"]
layout_mode = 2
size_flags_vertical = 1
text = "Song Name
Difficulty: Easy"
label_settings = SubResource("LabelSettings_k5q1p")
autowrap_mode = 3

[node name="Artist" type="MarginContainer" parent="MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -202.0
offset_right = 1.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer2/Panel/Artist"]
layout_mode = 2
text = "Artist: 
CheeseBuiscuit"
label_settings = SubResource("LabelSettings_g0joi")

[node name="KonstantineToggle" type="Sprite2D" parent="."]
position = Vector2(298, 241)
texture = ExtResource("6_6xnmg")

[node name="Button" type="Button" parent="KonstantineToggle"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.5
offset_top = -16.5
offset_right = -18.5
offset_bottom = -16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xsk60")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_myhdo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fn80b")

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -52.0
offset_right = 234.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_6hf3r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kubmr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ab8la")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p8h3n")
icon = ExtResource("7_5c4xj")

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/Panel/Song1Button" to="." method="_on_song_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/Panel2/Song2Button" to="." method="_on_song_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/Panel3/Song3Button" to="." method="_on_song_3_button_pressed"]
[connection signal="button_down" from="MarginContainer/ScrollContainer/VBoxContainer/Panel4/Song4Button" to="." method="_on_song_4_button_button_down"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/Panel5/Song5Button" to="." method="_on_song_5_button_pressed"]
[connection signal="pressed" from="KonstantineToggle/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
